<resources>
    <string name="app_name">Login Register PHP MySQL</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fragment">fragment:</string>
    <string name="fragment_a">A</string>
    <string name="fragment_b">B</string>
    <string name="fragment_c">C</string>
    <string name="fragment_d">D</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="login">Login</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="create_account">Create Account</string>
    <string name="awareness">AWARENESS</string>
    <string name="continue_with_vk">Continue with vk</string>
    <string name="continue_with_facebook">Continue with facebook</string>

    <string name="pref_file">org.loginregister.preference_file</string>
    <string name="pref_login_status">org.loginregister.preference_login_status</string>
    <string name="pref_user_name">org.loginregister.preference_email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_registered">Not registered? Register here</string>
    <string name="name">NAME</string>
</resources>
