<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B6688"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.loginregister.activities.StartAct">


    <FrameLayout
        android:id="@+id/fragment_container_startact"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_awareness"
            android:padding="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:src="@drawable/awareness_logo" />

        <TextView
            android:id="@+id/tv_awareness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_view_awareness"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:gravity="center"
            android:text="@string/awareness" />

        <Button
            android:text="@string/continue_with_facebook"
            android:drawableLeft="@drawable/fb_logo"
            android:drawableStart="@drawable/fb_logo"
            android:id="@+id/button_fb"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_awareness"
            android:background="@drawable/button_drawable_fb"
            android:padding="10dp" />

        <Button
            android:text="@string/continue_with_vk"
            android:drawableLeft="@drawable/vk_logo"
            android:drawableStart="@drawable/vk_logo"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/button_vk"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_fb"
            android:background="@drawable/button_drawable_vk" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_layout_bottom_login_create"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33EBCFCF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_margin="10dp"
            android:id="@+id/tv_login_start_act"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/login"
            android:textSize="20sp" />
        <TextView
            android:layout_margin="10dp"
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/create_account"
            android:textSize="20sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>

